# legal-data-cleaner

./: README.md  pyproject.toml  technical_documentation.md
legal_data_cleaner/: __init__.py  cleaner.py  constants.py  validator.py
legal_data_cleaner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
